# real_time_cv

./: README.md  pyproject.toml  requirements.txt
examples/: dummy_run.py  yolo_segmentation.py
src/real_time_cv/: __init__.py  app.py  file_utils.py  ice.py  processing.py  stream.py  streams.py
src/real_time_cv/templates/: index.html
