[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "real_time_cv"
version = "1.0.0"
description = "Streamlit app for real time visualisation of various CV processing e.g. segmentation."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Piotr Lachert", email = "pmlachert@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "aioice==0.9.0",
    "aiortc==1.5.0",
    "altair==5.0.1",
    "attrs==23.1.0",
    "av==10.0.0",
    "blinker==1.6.2",
    "cachetools==5.3.1",
    "certifi==2023.5.7",
    "cffi==1.15.1",
    "charset-normalizer==3.1.0",
    "click==8.1.4",
    "cryptography==41.0.1",
    "decorator==5.1.1",
    "dnspython==2.3.0",
    "gitdb==4.0.10",
    "GitPython==3.1.31",
    "google-crc32c==1.5.0",
    "idna==3.4",
    "ifaddr==0.2.0",
    "importlib-metadata==6.7.0",
    "Jinja2==3.1.2",
    "jsonschema==4.18.0",
    "jsonschema-specifications==2023.6.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.3",
    "mdurl==0.1.2",
    "numpy==1.25.0",
    "opencv-python==4.8.0.74",
    "packaging==23.1",
    "pandas==2.0.3",
    "Pillow==9.5.0",
    "protobuf==4.23.4",
    "pyarrow==12.0.1",
    "pycparser==2.21",
    "pydeck==0.8.1b0",
    "pyee==11.0.0",
    "Pygments==2.15.1",
    "pylibsrtp==0.8.0",
    "Pympler==1.0.1",
    "pyOpenSSL==23.2.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pytz-deprecation-shim==0.1.0.post0",
    "referencing==0.29.1",
    "requests==2.31.0",
    "rich==13.4.2",
    "rpds-py==0.8.8",
    "six==1.16.0",
    "smmap==5.0.0",
    "streamlit==1.24.0",
    "streamlit-webrtc==0.45.1",
    "tenacity==8.2.2",
    "toml==0.10.2",
    "toolz==0.12.0",
    "tornado==6.3.2",
    "typing_extensions==4.7.1",
    "tzdata==2023.3",
    "tzlocal==4.3.1",
    "urllib3==2.0.3",
    "validators==0.20.0",
    "watchdog==3.0.0",
    "zipp==3.15.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "twine>=4.0.2",
    "build",
]